# opensynap

./: LICENSE  README.md  pyproject.toml
src/opensynap/: utils.py
src/opensynap/terminal/: __init__.py  ansi.py  health_style.py  links.py  note.py  note_manual.py  palette.py  progress_line.py  prompt_style.py  stream_writer.py  theme.py  wrap.py
